--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -10,30 +10,31 @@
 
       <!-- Page Content -->
       <main class="container">
+        <% include ../static/partials/messages.ejs %>
 
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
-          <h1 class="display-3">Welcome to Bloccit</h1>
-          <p class="lead">An application for users to share information.</p>
-          <a href="#" class="btn btn-primary btn-lg">Sign up</a>
+          <h1 class="display-3">Blocipedia: social, markdown wikis</h1>
+          <p class="lead">Create and share markdown wikis</p>
+          <a href="/users/signup" class="btn btn-primary btn-lg">Sign up</a>
         </header>
 
         <!-- Page Features -->
         <section class="row text-center">
 
           <section class="col-lg-4">
-            <h4 class="card-title">Post</h4>
-            <p class="card-text">Share your thoughts about subjects that are important to you.</p>
+            <h4 class="card-title">Create</h4>
+            <p class="card-text">Carefully craft and edit content.</p>
           </section>
 
           <section class="col-lg-4">
-            <h4 class="card-title">Comment</h4>
-            <p class="card-text">Your opinion counts! But you have to make yourself heard first!</p>
+            <h4 class="card-title">Collobrate</h4>
+            <p class="card-text">Get involved! Work with users to evolve the site.</p>
           </section>
 
           <section class="col-lg-4">
-            <h4 class="card-title">Stay Informed</h4>
-            <p class="card-text">See the most active topics as well as trending subjects every day!</p>
+            <h4 class="card-title">Share</h4>
+            <p class="card-text">Share your wikis either publicly or privately with other collobrators.</p>
           </section>
 
         </section>
@@ -42,11 +43,6 @@
       </main>
       <!-- /.container -->
 
-      <script
-        src="http://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous">
-      </script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+      <% include ./partials/baseScripts.ejs %>
     </body>
 </html>
