--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include ./partials/head.ejs %>
+    <% include partials/head.ejs %>
   </head>
   <body>
 
       <!-- Navigation -->
-      <% include ./partials/navbar.ejs %>
+      <% include partials/navbar.ejs %>
 
       <!-- Page Content -->
       <main class="container">
+        <% include partials/messages.ejs %>
 
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
-          <h1 class="display-3">Welcome to Bloccit</h1>
-          <p class="lead">An application for users to share information.</p>
-          <a href="#" class="btn btn-primary btn-lg">Sign up</a>
+          <h1 class="display-3">Welcome to Blocipedia</h1>
+          <p class="lead">Create and share markdown wikis</p>
+          <a href="/users/signup" class="btn btn-primary btn-lg">Sign up</a>
         </header>
 
         <!-- Page Features -->
         <section class="row text-center">
 
           <section class="col-lg-4">
-            <h4 class="card-title">Post</h4>
-            <p class="card-text">Share your thoughts about subjects that are important to you.</p>
+            <h4 class="card-title">Create</h4>
+            <p class="card-text">Carefully craft and edit content.</p>
           </section>
 
           <section class="col-lg-4">
-            <h4 class="card-title">Comment</h4>
-            <p class="card-text">Your opinion counts! But you have to make yourself heard first!</p>
+            <h4 class="card-title">Collobrate</h4>
+            <p class="card-text">Get involved! Work with users to evolve the site.</p>
           </section>
 
           <section class="col-lg-4">
-            <h4 class="card-title">Stay Informed</h4>
-            <p class="card-text">See the most active topics as well as trending subjects every day!</p>
+            <h4 class="card-title">Share</h4>
+            <p class="card-text">Share your wikis either publicly or privately with other collobrators.</p>
           </section>
 
         </section>
@@ -42,6 +43,6 @@
       </main>
       <!-- /.container -->
 
-      <% include ./partials/baseScripts.ejs %>
+      <% include partials/baseScripts.ejs %>
     </body>
 </html>
