--- a/src/views/users/signup.ejs
+++ b/src/views/users/signup.ejs
@@ -6,13 +6,14 @@
     <body>
         <% include ../static/partials/navbar.ejs %>
        <main class="container">
+          <% include ../static/partials/messages.ejs %>
            <h2>Welcome to Blocipedia</h2>
             <div class="row">
               <div class="col-md-8">
-                <form method="POST" action="/users/">
+                <form method="POST" action="/users/signup">
                   <div class="form-group">
-                    <label>Name:</label>
-                    <input type="text" name="name" placeholder="Enter Name" class="form-control"/>
+                    <label>Username:</label>
+                    <input type="text" name="username" placeholder="Enter Username" class="form-control"/>
                   </div>
                   <div class="form-group">
                     <label>Email:</label>
