--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -29,12 +29,12 @@
 
           <section class="col-lg-4">
             <h4 class="card-title">Collobrate</h4>
-            <p class="card-text">Get involved! Work with users to evolve the site.</p>
+            <p class="card-text">Get involved, evolve the site.</p>
           </section>
 
           <section class="col-lg-4">
             <h4 class="card-title">Share</h4>
-            <p class="card-text">Share your wikis either publicly or privately with other collobrators.</p>
+            <p class="card-text">Share your wikis either publicly or privately.</p>
           </section>
 
         </section>
