--- a/src/views/users/signup.ejs
+++ b/src/views/users/signup.ejs
@@ -24,10 +24,10 @@
                     <input type="password" name="password" placeholder="Enter Password" class="form-control"/>
                   </div>
                   <div class="form-group">
-                    <label>Password:</label>
+                    <label>Confirm password:</label>
                     <input type="password" name="passwordConfirmation" placeholder="Enter Password confirmation" class="form-control"/>
                   </div><br/>
-                  <input type="submit" value="Sign Up" class="btn btn-primary"/>
+                  <button type="submit" class="btn btn-primary">Sign up</button>
                 </form>
               </div>
             </div>
