--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -1,3 +1,11 @@
 body {
     padding-top: 54px;
   }
+
+.navbar.bg-dark {
+  background-color: #204060;
+}
+
+.btn-primary {
+  background-color: #48A3C6;
+}
