wiki crud in progress

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -15,6 +15,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/users/signout">Sign out</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/wikis">Wikis</a>
+              </li>
           <% } else { %>
             <li class="nav-item">
               <a class="nav-link" href="/users/signup">Sign up</a>
