--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -12,7 +12,7 @@
 
       <form action="/wikis/<%= wiki.id %>/update" method="post">
         <div class="form-group">
-          <label for="title">Title</label>
+          <label for="title">Wiki Title</label>
           <input value="<%= wiki.title %>" type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
         </div>
         <div class="form-group">
