user-roles checkpoint done

--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -7,9 +7,9 @@
     <main class="container">
       <% include ../static/partials/navbar.ejs %>
       <h1>Wikis</h1>
-
+      <% if(currentUser) { %>
         <a href="/wikis/new" class="btn btn-success">New Wiki</a>
-      
+        <% } %>
       <ul class="list-group">
 
         <% wikis.forEach((wiki) => { %>
