--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -13,6 +13,9 @@
           </li>
           <% if(currentUser) { %>
             <li class="nav-item">
+              <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/users/signout">Sign out</a>
             </li>
             <li class="nav-item">
