private wikis functionality working

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -11,7 +11,8 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <% if(currentUser) { %>
+          <!-- Standard user -->
+          <% if(currentUser && currentUser.isStandard()) { %>
             <li class="nav-item">
               <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
             </li>
@@ -20,6 +21,21 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/wikis">Wikis</a>
+            </li>
+
+          <!-- Premium user -->
+          <% } else if(currentUser && currentUser.isPremium()) { %>
+            <li class="nav-item">
+                <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/signout">Sign out</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/wikis">Wikis</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/wikis/private">Private Wikis</a>
               </li>
           <% } else { %>
             <li class="nav-item">
