--- a/src/views/users/downgradeShow.ejs
+++ b/src/views/users/downgradeShow.ejs
@@ -21,7 +21,7 @@
             <h4>Basic</h4>
             <header class="jumbotron my-3">
                 <h2>Change plan</h2>
-                <p>To create private wikis, upgrade your account to premium for $16.99/month.</p>
+                <p>To create private wikis, upgrade your account to premium for $16.99.</p>
                 <form method="POST" action="/users/<%=currentUser.id %>/upgrade">
                   <script
                     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
