--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -44,7 +44,7 @@
                 <header class="jumbotron my-3">
                     <h2>Change plan</h2>
                     <p>Switch to basic, and create public wikis for $9.99.
-                    Note: You'll no longer have access to your private wikis. </p>
+                    Note: Your private wikis will automatically become public. </p>
                     <form  style="display:initial" method="POST" action="/users/<%=currentUser.id %>/downgrade">
                         <button type="submit" class="btn btn-danger">Go basic</button>
                     </form>
