--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -16,7 +16,17 @@
         </form>
         <% } %>
       <p><%= wiki.body %></p>
-      
+      <!-- Make private/public button -->
+      <% if( currentUser.isPremium() || currentUser.isAdmin() ) { %>
+        <div class="form-group">
+            <label for="private">Wiki Status</label>
+            <select class="form-control" name="private">
+                <option value="false">Public wiki</option>
+                <option value="true">Private wiki</option>
+            </select>
+        </div>
+    <% } %>
+    <!-- Make private/public button -->
     </main>
     <% include ../static/partials/baseScripts.ejs %>
   </body>
