--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -13,13 +13,14 @@
       <ul class="list-group">
 
         <% wikis.forEach((wiki) => { %>
-
+          <% if(wiki.private === false ) { %>
             <li class="list-group-item">
-            <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
-          </li>
+                <a href="/wikis/<%= wiki.id %>">
+                    <%= wiki.title %> </a>
+            </li>
+            <% } %>
         <% }) %>
       </ul>
-      
     </main>
   </body>
 </html>
