collabs in progress

--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -50,6 +50,12 @@
                     </form>
                 </header>
             <% } %>
+
+                <br>
+<h4>Your Wiki Collaborations</h4>
+<a href="/users/collaborations" class="btn btn-primary">See Collaborations</a>
+<br>
+<br>
         </main>
         <% include ../static/partials/baseScripts.ejs %>
       </body>
