--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -10,6 +10,7 @@
         <% include ../static/partials/messages.ejs %>
       <h1><%= wiki.title %></h1>
       
+    <!-- Make private/public button -->
       <% if(currentUser) { %>
         <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
         <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
@@ -19,6 +20,10 @@
       <p><%- wiki.body %></p>
     
     <!-- Make private/public button -->
+    <% if(wiki.private) { %>
+      <a href="/wikis/<%= wiki.id %>/collaborators" class="btn btn-info">Edit Collaborators</a>
+  <% } %>
+
     </main>
     <% include ../static/partials/baseScripts.ejs %>
   </body>
