--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -17,12 +17,14 @@
             <button type="submit" class="btn btn-danger">Delete</button>
         </form>
         <% } %>
-      <p><%- wiki.body %></p>
     
     <!-- Make private/public button -->
     <% if(wiki.private) { %>
-      <a href="/wikis/<%= wiki.id %>/collaborators" class="btn btn-info">Edit Collaborators</a>
+      <a href="/wikis/<%= wiki.id %>/collaborators" class="btn btn-primary">+ Add collaborators</a>
   <% } %>
+
+  <hr>
+  <p><%- wiki.body %></p>
 
     </main>
     <% include ../static/partials/baseScripts.ejs %>
