collab not working

--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -35,6 +35,9 @@
                 <% if(currentUser && (currentUser.id == wiki.userId || currentUser && currentUser.isAdmin())) { %>
                   <a href='/wikis/<%= wiki.id %>/collaborators' class="btn btn-primary">Edit Collaborators</a>
                 <% } %>
+                
+
+                <button type="submit" class="btn btn-primary">Update</button>
               </form>
             </main>
         
