--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -10,15 +10,22 @@
         <% include ../static/partials/messages.ejs %>
       <h1><%= wiki.title %></h1>
       
+    <!-- Make private/public button -->
       <% if(currentUser) { %>
         <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
         <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
             <button type="submit" class="btn btn-danger">Delete</button>
         </form>
         <% } %>
-      <p><%- wiki.body %></p>
     
     <!-- Make private/public button -->
+    <% if(wiki.private) { %>
+      <p><% include ../collaborators/add.ejs %></p>
+  <% } %>
+  <%- include("../collaborators/show.ejs", {collaborator}) %>
+
+  <p><%- wiki.body %></p>
+
     </main>
     <% include ../static/partials/baseScripts.ejs %>
   </body>
