--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -34,7 +34,8 @@
             
         <button type="submit" class="btn btn-primary">Update</button>
       </form>
-      
+      <p> <% include ../collaborators/add.ejs %></p>
+
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
