--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -21,20 +21,24 @@
   <p><%- wiki.body %></p>
       <hr>
        <!-- add collaborators button -->
+       
        <form style="width: 50%" action="/wikis/<%= wiki.id %>/collaborators/create" method="post">
         <div class="input-group">
-            <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
-            <button type="submit" class="btn btn-primary">+ add collaborators</button>
+           <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
+           <button type="submit" class="btn btn-primary">+ add collaborators</button>
         </div>
       </form> 
 
+
       <!-- show collaborators in a list -->
-      <h4>Collaborators on this wiki:</h4>
-      <% if(wiki.collaborators) { %>
-       <% wiki.collaborators.forEach((collaborator) => { %>
-          <small><% include("../collaborators/show.ejs", {collaborator}) %></small>
-          <% }) %>
-        <% } %>
+      <div>
+        <h4>Collaborators on this wiki:</h4>
+        <% if(wiki.collaborators) { %>
+          <% wiki.collaborators.forEach((collaborator) => { %>
+            <small><% include("../collaborators/show.ejs", {collaborator}) %></small>
+            <% }) %>
+          <% } %>
+      </div>
       <!-- end collaborators in a list -->
       </main>
     <% include ../static/partials/baseScripts.ejs %>
