revised wiki show

--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -35,8 +35,8 @@
         <h4>Collaborators on this wiki:</h4>
         <ul>
         <% if(wiki.collaborators) { %>
-          <% wiki.collaborators.forEach((collaborator) => { %>
-            <li><% include("../collaborators/show.ejs", {collaborator}) %></li>
+          <% wiki.collaborators.forEach((collaboratora) => { %>
+            <li><% include("../collaborators/show.ejs", {collaborators}) %></li>
             <% }) %>
           <% } %>
         </ul>
