updated show view

--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -34,9 +34,9 @@
       <div>
         <h4>Collaborators on this wiki:</h4>
         <ul>
-        <% if(wiki.collaborators) { %>
-          <% wiki.collaborators.forEach((collaborators) => { %>
-            <li><% include("../collaborators/show.ejs", {collaborators}) %></li>
+        <% if(wiki.collaborator) { %>
+          <% wiki.collaborator.forEach((collaborator) => { %>
+            <li><% include("../collaborators/show.ejs", {collaborator}) %></li>
             <% }) %>
           <% } %>
         </ul>
