--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -22,7 +22,7 @@
       <hr>
        <!-- add collaborators button -->
        
-       <form style="width: 50%" action="/wikis/<%= wiki.id %>/collaborators/create" method="post">
+       <form style="width: 400px" action="/wikis/<%= wiki.id %>/collaborators/create" method="post">
         <div class="input-group">
            <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
            <button type="submit" class="btn btn-primary">+ add collaborators</button>
