--- a/src/views/collaborators/show.ejs
+++ b/src/views/collaborators/show.ejs
@@ -1,12 +1,13 @@
 
-        <% if(collaborator) { %>
+    <div>
+       <% if(collaborator) { %>
         <ul class="list-group">
             <li class="list-group-item">
                 <h4>
                     <%= collaborator.User.username %>
                 </h4>
                 <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
-                    <% console.log(collaborator.wikiId) %>
+                    <% console.log(collaborators.wikiId) %>
                 <form action="/wikis/<%= collaborator.wikiId %>/collaborators/delete" method="post">
                     <button type="submit" class="btn btn-danger">Delete</button>
                     <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
@@ -15,6 +16,4 @@
             <% }) %>
         </ul>
         <% } %>
-</body>
-
-</html>
+    </div>
