--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -29,19 +29,19 @@
         </div>
       </form> 
 
-
       <!-- show collaborators in a list -->
       <div>
-        <h4>Collaborators on this wiki:</h4>
-        <ul>
-        <% if(wiki.collaborators) { %>
-          <% wiki.collaborators.forEach((collaborators) => { %>
-            <li><% include("../collaborators/show.ejs", {collaborator}) %></li>
-            <% }) %>
-          <% } %>
-        </ul>
-      </div>
+          <h4>Collaborators on this wiki:</h4>
+          <%= wiki.collaborators ? "wiki has collaborators" : "no collaborators found" %>          <ul>
+          <% if(wiki.collaborators) { %>
+            <% wiki.collaborators.forEach((collaborators) => { %>
+              <li><% include("../collaborators/show.ejs", {collaborator}) %></li>
+              <% }) %>
+            <% } %>
+          </ul>
+        </div>
       <!-- end collaborators in a list -->
+
       </main>
     <% include ../static/partials/baseScripts.ejs %>
   </body>
