--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -34,8 +34,8 @@
           <h4>Collaborators on this wiki:</h4>
           `<%= wiki.collaborators ? wiki.collaborators.length : wiki.collaborators %>`<ul>
           <% if(wiki.collaborators) { %>
-            <% wiki.collaborators.forEach((collaborators) => { %>
-              <li><% include("../collaborators/show.ejs", {collaborator}) %></li>
+            <% wiki.collaborators.forEach((collaborator) => { %>
+              <li><% include("../collaborator/show.ejs", {collaborator}) %></li>
               <% }) %>
             <% } %>
           </ul>
