--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -17,8 +17,29 @@
         </form>
         <% } %>
       <p><%- wiki.body %></p>
+        
+    <!-- add collaborators button -->
+       
+    <form style="width: 400px" action="/wikis/<%= wiki.id %>/collaborators/create" method="post">
+      <div class="input-group">
+         <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
+         <button type="submit" class="btn btn-primary">+ add collaborators</button>
+      </div>
+    </form> 
+
+    <!-- show collaborators in a list -->
+    <div>
+        <h4>Collaborators on this wiki:</h4>
+        `<%= wiki.collaborators ? wiki.collaborators.length : wiki.collaborators %>`<ul>
+        <% if(wiki.collaborators) { %>
+          <% wiki.collaborators.forEach((collaborator) => { %>
+            <li><% include("../collaborators/show.ejs", {collaborator}) %></li>
+            <% }) %>
+          <% } %>
+        </ul>
+      </div>
+    <!-- end collaborators in a list -->
     
-    <!-- Make private/public button -->
     </main>
     <% include ../static/partials/baseScripts.ejs %>
   </body>
