fixed syntax error

--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -32,7 +32,7 @@
       <!-- show collaborators in a list -->
       <div>
           <h4>Collaborators on this wiki:</h4>
-          `<%= wiki.collaborators ? wiki.collaborators.length : wiki.collaborators %>`<ul>
+          <%= wiki.collaborators ? wiki.collaborators.length : wiki.collaborators %><ul>
           <% if(wiki.collaborators) { %>
             <% wiki.collaborators.forEach((collaborator) => { %>
               <li><% include("../collaborators/show.ejs", {collaborator}) %></li>
