--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -28,7 +28,9 @@
          <button type="submit" class="btn btn-primary">+ add collaborators</button>
       </div>
     </form> 
-  
+
+      <!--<a href="/wikis/<%= wiki.id %>/collaborators" class="btn btn-primary">+ Add collaborators</a>-->
+    
     </main>
     <% include ../static/partials/baseScripts.ejs %>
   </body>
