--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -29,7 +29,7 @@
       </div>
     </form> 
 
-      <!--<a href="/wikis/<%= wiki.id %>/collaborators" class="btn btn-primary">+ Add collaborators</a>-->
+      <a href="/wikis/<%= wiki.id %>/collaborators" class="btn btn-primary">+ Add collaborators</a>
     
     </main>
     <% include ../static/partials/baseScripts.ejs %>
