--- a/src/views/users/collaborations.ejs
+++ b/src/views/users/collaborations.ejs
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
-	<html>
-	  <head>
-	    <% include ../static/partials/head.ejs %>
-	  </head>
-	  <body>
+  <html>
+    <head>
+      <% include ../static/partials/head.ejs %>
+    </head>
+    <body>
       <% include ../static/partials/navbar.ejs %>
       
-	    <main class="container">
+      <main class="container">
 
-	      <% include ../static/partials/messages.ejs %>
+        <% include ../static/partials/messages.ejs %>
 
-	        <h1> Collaborations</h1>
+          <h1> Collaborations</h1>
+            <ul class ="list-group">
+              <% collaborations.forEach((collaboration) => {  %>
+                  <li class="list-group-item">
+                        <a href="/wikis/<%= collaboration.wikiId %>">
+                          <%= collaboration.Wiki.title %></a>
+                 </li>
+              <% }) %>
+            </ul>
 
-	        <% if(collaborations.length !== 0) { %>
-	          <p>
-	          <ul class ="list-group">
-	            <% collaborations.forEach((collaboration) => {  %>
-	                <li class="list-group-item">
-	                      <a href="/wikis/<%= collaboration.Wiki.id %>"><%= collaboration.Wiki.title %></a>
-	               </li>
-	            <% }) %>
-	          </ul>
-          </p>
-          
-	        <% } else { %>
-	            <p class="lead">You are not a collaborator on any wikis!</p>
-          <% } %>
-          
-	    </main>
-	  </body>
-	</html> 
+      </main>
+    </body>
+    <% include ../static/partials/baseScripts.ejs %>
+  </html> 
