debugging show view

--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -33,7 +33,20 @@
       <button href="`${base}/${this.wiki.id}/collaborators/show`"></button>
   
       <% include ../collaborators/show.ejs %>
-      
+       <!-- show collaborators in a list -->
+       <div>
+          <h4>Collaborators on this wiki:</h4>
+          <%= wiki.collaborators ? wiki.collaborators.length : wiki.collaborators %>
+          <ul>
+          <% if(wiki.collaborators) { %>
+            <% wiki.collaborators.forEach((collaborators) => { %>
+              <li><% include("../collaborators/show.ejs", {collaborator}) %></li>
+              <% }) %>
+            <% } %>
+          </ul>
+        </div>
+        <!-- end collaborators in a list -->
+
     </main>
 
   <% include ../static/partials/baseScripts.ejs %>
