--- a/src/views/collaborators/show.ejs
+++ b/src/views/collaborators/show.ejs
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <% include ../static/partials/head.ejs %>
-  </head>
-  <body>
+</head>
+
+<body>
     <% include ../static/partials/navbar.ejs %>
-
-      <h4>New Collaborator test</h4>
-
-
-    <% include ../static/partials/baseScripts.ejs %>
+    <main class="container">
+        <% include ../static/partials/messages.ejs %>
+        <% if(wiki.private) { %>
+        <h1>Collaborators for
+            <%= wiki.title %> Wiki</h1>
+        <hr>
+        <h4> Add a New Collaborator</h4>
+        <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+        <form style="width:25%" action="/wikis/<%= wiki.id %>/collaborators/create" method="post">
+            <div class="input-group">
+                <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
+                <button type="submit" class="btn btn-secondary">Add</button>
+            </div>
+        </form>
+        <% } %>
+        <% } %>
+        <% if(collaborators) { %>
+        <ul class="list-group">
+            <% collaborators.forEach((collaborator) => {  %>
+            <li class="list-group-item">
+                <h4>
+                    <%= collaborator.User.username %>
+                </h4>
+                <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+                    <% console.log(collaborator.wikiId) %>
+                <form action="/wikis/<%= collaborator.wikiId %>/collaborators/delete" method="post">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                    <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
+                </form>
+                <% } %>
+            </li>
+            <% }) %>
+        </ul>
+        <% } %>
+</body>
 
 </html>
