delete button in progress

--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -16,36 +16,58 @@
             <button type="submit" class="btn btn-danger">Delete</button>
         </form>
         <% } %>
+        <hr>
       <p><%- wiki.body %></p>
     
     <!-- Add Collaborator button -->
-
-
-    
+    <% if(wiki.private) { %>
     <form style="width: 400px" action="/wikis/<%= wiki.id %>/collaborators/create" method="post">
       <div class="input-group">
          <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
-         <button type="submit" class="btn btn-primary">+ add collaborators</button>
+         <button type="submit" class="btn btn-primary">+ Add collaborators</button>
       </div>
     </form> 
-
+    <% } %>
        <!--<a href="/wikis/<%= wiki.id %>/collaborators" class="btn btn-primary">+ Add collaborators</a>-->
       
       <!-- show collaborators in a list -->
-
+      <h6>Collaborators:</h6>
         <% if(wiki.collaborators) { %>
         <ul class="list-group">
             <% wiki.collaborators.forEach((collaborator) => { %>
               <li class="list-group-item">
-                  <a href="/wikis/<%= wiki.id %>/collaborators/<%= collaborator.id %>"> <%= collaborator.User.username %> </a>
-
+                  <small><%= collaborator.User.username %> </small>
+                  <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+                    <form action="/wikis/<%= collaborator.wikiId %>/collaborators/delete" method="post">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
+                    </form>
+                    <% } %>
               </li>
             <% }) %>
           </ul>
         <% } %>
         <!-- end collaborators in a list -->
-     
-         
+      
+        <!-- delete collaborators in a list not working yet -->
+        <% if(wiki.collaborators) { %>
+          <ul class="list-group">
+              <% wiki.collaborators.forEach((collaborator) => {  %>
+              <li class="list-group-item">
+                  <s>
+                      <%= collaborator.User.username %>
+                  </h4>
+                  <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+                  <form style="width:25%" action="/wikis/<%= collaborator.wikiId %>/collaborators/delete" method="post">
+                      <button type="submit" class="btn btn-danger">Delete</button>
+                      <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
+                  </form>
+                  <% } %>
+              </li>
+              <% }) %>
+          </ul>
+          <% } %>
+          
     </main>
     <% include ../static/partials/baseScripts.ejs %>
   </body>
