--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -34,8 +34,8 @@
                  <% } %>
                 <!-- Make private/public button -->
                     
-                <!-- Collaborator add and delete button -->
-                <p><% include ../collaborators/show.ejs %></p>
+                <!-- Collaborator section -->
+                
                  
                 
         <button type="submit" class="btn btn-primary">Update</button>
