--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -37,6 +37,12 @@
             <% wiki.collaborators.forEach((collaborator) => { %>
               <li class="list-group-item">
                   <small><%= collaborator.User.username %> </small>
+                  <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+                    <form action="/wikis/<%= collaborator.wikiId %>/collaborators/delete" method="post">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
+                    </form>
+                    <% } %>
               </li>
             <% }) %>
           </ul>
